# kwdcmd

./: .envrc  .gitignore  .ocamlformat  CHANGES.md  CONTRIBUTING.org  LICENSE  README.md  README.org  dune  dune-project  dune-workspace  index.html  kwdcmd.opam  project.org
.github/workflows/: main.yml  release.yml
kwdcmd/: index.html
kwdcmd/Kwdcmd/: index.html
kwdcmd/Kwdcmd/Default_handler/: index.html
kwdcmd/Kwdcmd/Exec/: index.html
kwdcmd/Kwdcmd/Make_exec/: index.html
kwdcmd/Kwdcmd/Make_exec/argument-1-Handler/: index.html
kwdcmd/Kwdcmd/Optional/: index.html
kwdcmd/Kwdcmd/Required/: index.html
kwdcmd/Kwdcmd/module-type-Exec/: index.html
kwdcmd/Kwdcmd/module-type-Exec_handler/: index.html
lib/: dune  kwdCmd.ml  kwdcmd.ml
lib/test/: dune  example.ml
test/: calc_example.ml  cp_example.ml  dune  rm_example.ml
